# bytebuffer

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: buffer.rs  lib.rs  reader.rs
tests/: buffer.rs  lib.rs  reader.rs
