[package]
name = "bytebuffer-rs"
version = "2.0.0"
authors = ["Terah <terah.dev@gmail.com>", "Shiroy <awacheux.utc@gmail.com>"]
description = "A bytebuffer for networking and binary protocols"
homepage = "https://github.com/terahlunah/bytebuffer-rs"
repository = "https://github.com/terahlunah/bytebuffer-rs"
keywords = ["byte", "buffer", "network", "protocol", "bytebuffer"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "bytebuffer"

[dependencies]
byteorder = "1"

