[package]
name = "bytebuffer"
version = "2.1.1"
authors = ["Terah <terah.dev@gmail.com>", "Shiroy <awacheux.utc@gmail.com>"]
description = "A bytebuffer for networking and binary protocols"
homepage = "https://github.com/terahlunah/bytebuffer"
repository = "https://github.com/terahlunah/bytebuffer"
keywords = ["byte", "buffer", "network", "protocol", "bytebuffer"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "bytebuffer"

[dependencies]
byteorder = "1"

