[package]
name = "bytebuffer"
version = "2.3.0"
authors = ["Terah <terah.dev@gmail.com>", "Shiroy <awacheux.utc@gmail.com>"]
description = "A bytebuffer for networking and binary protocols"
homepage = "https://github.com/terahlunah/bytebuffer"
repository = "https://github.com/terahlunah/bytebuffer"
keywords = ["byte", "buffer", "network", "protocol", "bytebuffer"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "bytebuffer"

[features]
default = []
half = ["dep:half"]

[dependencies]
byteorder = "1.5.0"
half = { version = "2.4.1", optional = true }